--- a/nginx.conf.example
+++ b/nginx.conf.example
@@ -25,6 +25,15 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
+    # Proxy GenieACS UI
+    location /acs/ {
+        proxy_pass http://127.0.0.1:3000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # Konfigurasi PHP-FPM
     location ~ \.php$ {
         include snippets/fastcgi-php.conf;
